--- a/src/views/partials/header.mustache
+++ b/src/views/partials/header.mustache
@@ -12,7 +12,7 @@
       <div class="container">
         <a href="/">PetShop</a>
         <form method="GET" action="/search">
-          <input type="search" name="q" placeholder="Pesquisar" />
+          <input type="search" name="q" placeholder="Pesquisar" value="{{ query }}" />
         </form>
       </div>
     </header>
